     removal of deprecated methods.

-Embedded server:
    -XML escaping has been fixed, this could cause invalid XML documents
     to be returned
    -new config file option 'maxWorkQueueSize' that lets you set the maximum
     size of the request queue - if it gets larger than this, requests will
     be rejected (503 Service unavailable)

-Rule syntax:
    -A rule may now have a single example sentence as long as it has a 'correction'
     attribute - this can save some redundancy if the only correct sentence is the
     same as the incorrect sentence with the correction applied. Before, a rule
     needed at least two example sentences.
    -'example' element: type="incorrect" is now optional if there's a 'correction'
     attribute. The 'correction' attribute implies that the sentence is incorrect.
    -'example' element: type="correct" is now optional. No 'type' attribute and
     no 'correction' attribute implies that the sentence is correct.

-Internal:
    -We have switched from Apache Tika to language-detector
     (https://github.com/optimaize/language-detector) for automatically
     identifying the text language. It should be faster and results
     should be more reliable.
     Detection of Asturian and Galician had to be disabled because the
     detection quality was too low and also affected detection of Spanish.
    -Fixed a regression that made it impossible to load external rule files in the GUI.


2.8 (2014-12-30)

-Asturian:
    -removed dependency on Hunspell, now uses Morfologik for spell checking

-Breton:
    -added and improved a few rules

-Catalan:
    -updated dictionary
    -added and improved rules
    -fixed false alarms

-Dutch:
    -added and improved many rules

-English:
    -some new rules (thanks to Nick Hough)
    -updated the tagger and synthesizer dictionaries, fixing issue #202
    -new filter to be used for matching the part-of-speech of parts of words, e.g.:
         <pattern>