@@ -82,6 +82,9 @@ public class CommandLineParser {
       } else if (args[i].equals("--languagemodel")) {
         checkArguments("--languagemodel", i, args);
         options.setLanguageModel(new File(args[++i]));
+      } else if (args[i].equals("--rulefile")) {
+        checkArguments("--rulefile", i, args);
+        options.setRuleFile(args[++i]);
       } else if (args[i].equals("-c") || args[i].equals("--encoding")) {
         checkArguments("-c/--encoding", i, args);
         options.setEncoding(args[++i]);
@@ -158,6 +161,8 @@ public class CommandLineParser {
             + "  -v, --verbose            print text analysis (sentences, part-of-speech tags) to STDERR\n"
             + "  --version                print LanguageTool version number and exit\n"
             + "  -a, --apply              automatically apply suggestions if available, printing result to STDOUT\n"
+            + "  --rulefile FILE          use an additional grammar file; if the filename contains a known language code,\n" +
+            "                             it is used in addition of standard rules\n"
             + "  --languagemodel DIR      a directory with a '3grams' sub directory with a Lucene index that\n"
             + "                           contains ngram occurrence counts; activates the confusion rule if supported\n"
             + "  --xmlfilter              remove XML/HTML elements from input before checking (this is deprecated)");
