@@ -78,6 +78,12 @@ LanguageTool Change Log
      size of the request queue - if it gets larger than this, requests will
      be rejected (503 Service unavailable)
 
+-Command-line:
+    -It is now possible to add an external rule file when calling LanguageTool from the
+     command line. Use --rulefile <file> to add a file. If the file name has a format
+     that contains a language name, it will be used alongside other rules; otherwise,
+     it will replace the rules. This fixes github issue #192.
+
 -Rule syntax:
     -A rule may now have a single example sentence as long as it has a 'correction'
      attribute - this can save some redundancy if the only correct sentence is the
